--- a/modularity1.html
+++ b/modularity1.html
@@ -14,29 +14,29 @@
   		<ol class="instruction-list">
 
 			  <li>
-  				<h1 class="instruction-title">Data Table</h1>
+  				<h1 class="instruction-title">border Table</h1>
 
-	    		<p class="instruction-text">Style a table full of data so that it looks nicer than the brower defaults.</p>
+	    		<p class="instruction-text">Style a table full of border so that it looks nicer than the brower defaults.</p>
 					<div class="instruction-answer">
 						<!-- Edit here -->
 						<table class="table">
-							<tr>
-								<td>0</td>
-								<td>Sean</td>
-								<td>Daaken</td>
-								<td>@seandaken</td>
+							<tr class="table-row">
+								<td class="table-border">0</td>
+								<td class="table-border">Sean</td>
+								<td class="table-border">Daaken</td>
+								<td class="table-border">@seandaken</td>
 							</tr>
-							<tr>
-								<td>1</td>
-								<td>Raine</td>
-								<td>Lourie</td>
-								<td>@metaraine</td>
+							<tr class="table-row">
+								<td class="table-border">1</td>
+								<td class="table-border">Raine</td>
+								<td class="table-border">Lourie</td>
+								<td class="table-border">@metaraine</td>
 							</tr>
-							<tr>
-								<td>2</td>
-								<td>Matt</td>
-								<td>Null</td>
-								<td>@nullempire</td>
+							<tr class="table-row">
+								<td class="table-border">2</td>
+								<td class="table-border">Matt</td>
+								<td class="table-border">Null</td>
+								<td class="table-border">@nullempire</td>
 							</tr>
 						</table>
 				    <!-- End editable area -->
@@ -47,31 +47,31 @@
 						<!-- Edit here -->
 						<table class="table">
 							<thead>
-								<tr>
-									<th>#</th>
-									<th>First Name</th>
-									<th>Last Name</th>
-									<th>Username</th>
+								<tr class="table-row">
+									<th class="table-border">#</th>
+									<th class="table-border">First Name</th>
+									<th class="table-border">Last Name</th>
+									<th class="table-border">Username</th>
 								</tr>
 							</thead>
 							<tbody>
-								<tr>
-									<td>0</td>
-									<td>Sean</td>
-									<td>Daaken</td>
-									<td>@seandaken</td>
+								<tr class="table-row">
+									<td class="table-border">0</td>
+									<td class="table-border">Sean</td>
+									<td class="table-border">Daaken</td>
+									<td  class="table-border">@seandaken</td>
 								</tr>
-								<tr>
-									<td>1</td>
-									<td>Raine</td>
-									<td>Lourie</td>
-									<td>@metaraine</td>
+								<tr class="table-row">
+									<td class="table-border">1</td>
+									<td class="table-border">Raine</td>
+									<td class="table-border">Lourie</td>
+									<td class="table-border">@metaraine</td>
 								</tr>
-								<tr>
-									<td>2</td>
-									<td>Matt</td>
-									<td>Null</td>
-									<td>@nullempire</td>
+								<tr class="table-row">
+									<td class="table-border">2</td>
+									<td class="table-border">Matt</td>
+									<td class="table-border">Null</td>
+									<td class="table-border">@nullempire</td>
 								</tr>
 							</tbody>
 						</table>
@@ -89,7 +89,7 @@
 			    	<table class="column">
 			    		<tbody>
 			    			<tr>
-			    				<td><div class="larger">7</div><div>followers</div></td>
+			    				<td><div class="larger">7</div><div class="smaller">followers</div></td>
 			    				<td><div class="larger">59</div><div>starred</div></td>
 			    				<td><div class="larger">28</div><div>following</div></td>
 			    			</tr>
@@ -105,46 +105,46 @@
 	    		<p class="instruction-text">Bar widths are set in the HTML as if they were populated from the back-end. Everything else should be styled with CSS.</p>
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
-			    	<table>
+			    	<table class="bargraph">
 			    		<tr>
 			    			<th>Javascript</th>
-			    			<td><div style="width: 99%">21%</div></td>
+			    			<td class="bar"><div style="width: 99%" class="bargraph-bar">21%</div></td>
 			    		</tr>
 			    		<tr>
 			    			<th>Ruby</th>
-			    			<td><div style="width: 57.1%">12%</div></td>
+			    			<td class="bar"><div style="width: 57.1%" class="bargraph-bar">12%</div></td>
 			    		</tr>
 			    		<tr>
 			    			<th>Java</th>
-			    			<td><div style="width: 38.1%">8%</div></td>
+			    			<td class="bar"><div style="width: 38.1%" class="bargraph-bar">8%</div></td>
 			    		</tr>
 			    		<tr>
 			    			<th>Python</th>
-			    			<td><div style="width: 38.1%">8%</div></td>
+			    			<td class="bar"><div style="width: 38.1%" class="bargraph-bar">8%</div></td>
 			    		</tr>
 			    		<tr>
 			    			<th>Shell</th>
-			    			<td><div style="width: 38.1%">8%</div></td>
+			    			<td class="bar"><div style="width: 38.1%" class="bargraph-bar">8%</div></td>
 			    		</tr>
 			    		<tr>
 			    			<th>PHP</th>
-			    			<td><div style="width: 33.3%">7%</div></td>
+			    			<td class="bar"><div style="width: 33.3%" class="bargraph-bar">7%</div></td>
 			    		</tr>
 			    		<tr>
 			    			<th>C</th>
-			    			<td><div style="width: 28.8%">6%</div></td>
+			    			<td class="bar"><div style="width: 28.8%" class="bargraph-bar">6%</div></td>
 			    		</tr>
 			    		<tr>
 			    			<th>C++</th>
-			    			<td><div style="width: 23.8%">5%</div></td>
+			    			<td class="bar"><div style="width: 23.8%" class="bargraph-bar">5%</div></td>
 			    		</tr>
 			    		<tr>
 			    			<th>Perl</th>
-			    			<td><div style="width: 19.0%">4%</div></td>
+			    			<td class="bar"><div style="width: 19.0%" class="bargraph-bar">4%</div></td>
 			    		</tr>
 			    		<tr>
 			    			<th>Objective-C</th>
-			    			<td><div style="width: 14.3%">3%</div></td>
+			    			<td class="bar"><div style="width: 14.3%" class="bargraph-bar">3%</div></td>
 			    		</tr>
 			    	</table>
 				    <!-- End editable area -->
