--- a/modularity1.html
+++ b/modularity1.html
@@ -158,12 +158,12 @@
 					<div class="instruction-answer">
 			    	<!-- Edit here -->
 			    	<div>
-			    		<div>
-				    		<div>
+			    		<div class="lightbox-outer">
+				    		<div class="lightbox-inner">
 					    		<h3>Hello</h3>
 						    	<p>Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears. Cupcake ipsum dolor sit amet. Gummies lemon drops pastry topping wypas jujubes gummi bears. Cotton candy powder topping bear claw halvah jelly beans bear claw. Chocolate cake ice cream gummies apple pie muffin wafer gummi bears.</p>
 						    	<div>
-						    		<a href="#">Close</a>
+						    		<a href="#" class="lightbox-button">Close</a>
 						    	</div>
 				    		</div>
 				    	</div>
